--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,38 +1,21 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+import { WechatyBuilder } from 'wechaty'
 
-name: Node.js CI
+const bot = WechatyBuilder.build({
+  name: 'ding-dong-bot',
+  puppet: 'wechaty-puppet-service',
+})
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  schedule:
-    - cron: 0 5 * * 0 # 5 am Sunday (weekly)
+bot
+  .on('scan', (qrcode, status) =>
+    console.log(`Scan QR Code to login: ${status}\nhttps://wechaty.js.org/qrcode/${encodeURIComponent(qrcode)}`),
+  )
+  .on('login', user => console.log(`User ${user} logged in`))
+  .on('message', async message => {
+    console.log(`Message: ${message}`)
 
-jobs:
-  build:
-    strategy:
-      matrix:
-        os:
-          - macos-latest
-          - windows-latest
-          - ubuntu-latest
-        node-version:
-          - 16
-    runs-on: ${{ matrix.os }}
+    if (message.text() === 'ding') {
+      await message.say('dong')
+    }
+  })
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: npm
-        cache-dependency-path: package.json
-    - run: npm install
-    - run: npm test
-      env:
-        CI: true
-        WECHATY_PUPPET_SERVICE_TOKEN: ${{ secrets.WECHATY_PUPPET_SERVICE_TOKEN }}
+bot.start()
