--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,23 +3,28 @@ name: Node.js CI
 on:
   push:
     branches:
-      - main
+      - main  # 你可以根据需要调整触发分支
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 选择操作系统
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # 检出代码
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v2  # 设置 Node.js 环境
         with:
-          node-version: '14'
+          node-version: '16'  # 设置 Node.js 版本为 16
+
+      - name: Install npm 7 or higher
+        run: |
+          npm install -g npm@7  # 更新 npm 至 7 版本
+          npm --version  # 输出 npm 版本以确认
 
       - name: Install dependencies
-        run: npm install
+        run: npm install  # 安装项目依赖
 
       - name: Run tests
-        run: npm test
+        run: npm test  # 运行测试，或其他构建任务
