--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,42 +1,27 @@
-name: Node.js CI
+name: Deploy WeChaty Bot
 
 on:
   push:
     branches:
-      - main  # 触发工作流的分支，可以根据需要调整
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # 选择操作系统环境
+    runs-on: ubuntu-latest
 
     steps:
-      # 1. 检出代码
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      # 2. 设置 Node.js 环境
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'  # 设置 Node.js 版本为 16
+          node-version: '20'
 
-      # 3. 安装 npm 7 或更高版本
-      - name: Install npm 7 or higher
-        run: |
-          npm install -g npm@7  # 更新 npm 至 7 或更高版本
-          npm --version  # 输出 npm 版本，确认是否更新成功
-
-      # 4. 设置 WECHATY_PUPPET_SERVICE_TOKEN 环境变量
-      - name: Set environment variable for Wechaty Puppet Service
-        env:
-          WECHATY_PUPPET_SERVICE_TOKEN: ${{ secrets.WECHATY_PUPPET_SERVICE_TOKEN }}  # 引用 GitHub Secrets 中的 Token
-        run: |
-          echo "WECHATY_PUPPET_SERVICE_TOKEN is set."  # 确认环境变量已成功设置
-
-      # 5. 安装依赖
       - name: Install dependencies
         run: npm install
 
-      # 6. 运行测试
-      - name: Run tests
-        run: npm test
+      - name: Run WeChaty bot
+        env:
+          PADLOCAL_TOKEN: ${{ secrets.PADLOCAL_TOKEN }}
+        run: node index.js
