--- a/.github/workflows/wechaty.yml
+++ b/.github/workflows/wechaty.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -21,7 +20,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run WeChaty bot
-        env:
-          PADLOCAL_TOKEN: ${{ secrets.PADLOCAL_TOKEN }}
+      - name: Run bot
         run: node index.js
